Fix spacing on Home page

--- a/src/components/App/_App.scss
+++ b/src/components/App/_App.scss
@@ -17,6 +17,10 @@ html {
 main {
   display: flex;
   justify-content: center;
+  width: 100%;
+  .main-wrapper {
+    width: 100%;
+  }
 }
 
 h2 {
