--- a/src/components/Home/_Home.scss
+++ b/src/components/Home/_Home.scss
@@ -2,26 +2,38 @@
 @use '../../styles/mixins' as *;
 
 .hero-section {
-  @include space-evenly;
-  align-items: center;
-  height: 80vh;
-  .hero-text-container {
-    @include true-center;
-    .buttons-container {
-      display: flex;
-      align-items: center;
-      margin: 3rem 0;
-      button {
-        margin-right: 2rem;
-      }
-      button:hover {
-        @include link-hover;
-      }
+  height: 87vh;
+  width: 100%;
+  display: flex;
+}
+
+.hero-text-container {
+  width: 60%;
+  @include true-center;
+}
+
+.hero-text-wrapper {
+  display: flex;
+  flex-direction: column;
+  .buttons-container {
+    display: flex;
+    align-items: center;
+    margin: 3rem 0;
+    button {
+      margin-right: 2rem;
+    }
+    button:hover {
+      @include link-hover;
     }
   }
-  .hero-image {
-    width: 30%;
-    height: 85%;
+}
+
+.hero-image-container {
+
+  width: 40%;
+  img {
+    width: 100%;
+    height: 87vh;
     object-fit: cover;
   }
 }
