--- a/src/components/Nav/_Nav.scss
+++ b/src/components/Nav/_Nav.scss
@@ -7,7 +7,7 @@ nav {
   min-width: 100%;
   display: flex;
   justify-content: center;
-  height: 12vh;
+  height: 8.5rem;
 }
 
 .nav-wrapper {
@@ -22,6 +22,7 @@ nav {
   object-fit: cover;
   height: 100%;
   margin: 0;
+  width: 23rem;
 }
 
 .nav-buttons {
