--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,6 @@ $header-font: 'Glacial Indifference', sans-serif;
 $button-font: 'Nunito Sans', sans-serif;
 // $body-font: 'BR Shape', sans-serif;
 // $body-font: 'Ubuntu', sans-serif;
-// $body-font: 'Familjen Grotesk', sans-serif;
+$body-font: 'Familjen Grotesk', sans-serif;
 
 $box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
