--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -40,17 +40,24 @@ html {
 main {
   display: flex;
   justify-content: center;
+  width: 100%;
+}
+main .main-wrapper {
+  width: 100%;
 }
 
 h2 {
-  font-family: "Offside", sans-serif;
+  font-family: "Glacial Indifference", sans-serif;
   color: #424242;
-  font-size: 36px;
+  font-size: 3rem;
+  text-transform: uppercase;
+  font-weight: 400;
+  letter-spacing: 0.5rem;
   margin: 2em 0;
 }
 
 p {
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Familjen Grotesk", sans-serif;
   color: #424242;
   font-size: 3rem;
   letter-spacing: 0.05rem;
@@ -138,31 +145,41 @@ button:hover {
 }
 
 .hero-section {
+  height: 87vh;
+  width: 100%;
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  height: 80vh;
 }
-.hero-section .hero-text-container {
+
+.hero-text-container {
+  width: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.hero-section .hero-text-container .buttons-container {
+
+.hero-text-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+.hero-text-wrapper .buttons-container {
   display: flex;
   align-items: center;
   margin: 3rem 0;
 }
-.hero-section .hero-text-container .buttons-container button {
+.hero-text-wrapper .buttons-container button {
   margin-right: 2rem;
 }
-.hero-section .hero-text-container .buttons-container button:hover {
+.hero-text-wrapper .buttons-container button:hover {
   transform: scale(1.2);
   transition: transform 0.05s ease-in-out;
 }
-.hero-section .hero-image {
-  width: 30%;
-  height: 85%;
+
+.hero-image-container {
+  width: 40%;
+}
+.hero-image-container img {
+  width: 100%;
+  height: 87vh;
   object-fit: cover;
 }
 
@@ -172,26 +189,32 @@ nav {
   min-width: 100%;
   display: flex;
   justify-content: center;
+  height: 8.5rem;
 }
 
-.nav__wrapper {
+.nav-wrapper {
   display: flex;
   justify-content: space-between;
   width: 90%;
 }
+.nav-wrapper h1 {
+  margin: 0 0 0 2rem;
+}
 
 #logo {
   object-fit: cover;
-  height: 10rem;
+  height: 100%;
   margin: 0;
+  width: 23rem;
 }
 
-.nav__buttons {
+.nav-buttons {
   display: flex;
   align-items: center;
   height: 100%;
+  margin-right: 2rem;
 }
-.nav__buttons a {
+.nav-buttons a {
   font-family: "Nunito Sans", sans-serif;
   font-size: 1.5rem;
   font-weight: 700;
@@ -201,18 +224,18 @@ nav {
   color: #183C19;
   transition: transform 0.05s ease-in-out;
 }
-.nav__buttons a,
-.nav__buttons a:active {
+.nav-buttons a,
+.nav-buttons a:active {
   text-decoration: none;
 }
-.nav__buttons a:hover {
+.nav-buttons a:hover {
   transform: scale(1.2);
   transition: transform 0.05s ease-in-out;
 }
 
-@media screen and (min-width: 1400px) {
-  .nav__wrapper {
-    width: 1400px;
+@media screen and (min-width: 1440px) {
+  .nav-wrapper {
+    width: 1440px;
   }
 }
 .projects-section {
@@ -261,7 +284,7 @@ article {
   margin-top: 2.5rem;
 }
 .card-back p {
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Familjen Grotesk", sans-serif;
   color: #424242;
   font-size: 3rem;
   letter-spacing: 0.05rem;
